--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1, h2, p {
+  font-family: sans-serif;
+  text-align: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#mapid { height: 180px; }
