--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2, p {
+div, h1, h2, p {
   font-family: sans-serif;
   text-align: center;
 }
