fix logout and image, change styles for records

--- a/client/src/features/Records/MyRecords/App/App.module.css
+++ b/client/src/features/Records/MyRecords/App/App.module.css
@@ -1,16 +1,25 @@
 .Wrapper {
-  margin-top: 10px;
+  margin: 20px;
 }
 
 .Record {
-  border: 1px solid #c2c2c2;
+  background-color: #f8f8f8;
   border-radius: 3px;
-  margin: 10px;
-  padding: 10px;
-  background-color: #f7f7f7;
+  overflow: hidden;
+  margin: 30px auto 0px auto;
+  cursor: pointer;
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
+  transition: box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 5px 10px;
+}
+
+.Record:hover {
+  box-shadow: 0 0px 7px #888;
 }
 
 .Image {
+  height: 200px;
+  object-fit: contain;
   border: 1px solid #ced4da;
   border-radius: 3px;
   max-height: 300px;
