--- a/client/src/features/MapContainer/Map/Map.module.css
+++ b/client/src/features/MapContainer/Map/Map.module.css
@@ -5,8 +5,9 @@
 }
 
 .MapContainer {
-  height: 380px;
+  height: 300px;
   width: auto;
   margin: 0 auto;
-  border: 1px solid black;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
 }
