--- a/client/src/features/Records/MyRecords/NewRecordModal/NewRecordModal.module.css
+++ b/client/src/features/Records/MyRecords/NewRecordModal/NewRecordModal.module.css
@@ -1,4 +1,5 @@
 .Dropzone {
+  background: white;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -11,7 +12,6 @@
   color: #bdbdbd;
   outline: none;
   transition: border .24s ease-in-out;
-
   position: relative;
 }
 
@@ -35,7 +35,6 @@
 .Close:hover {
   cursor: pointer;
 }
-
 
 .Close:after {
   content: "\00d7";
