--- a/client/src/features/UI/Modal/Modal.module.css
+++ b/client/src/features/UI/Modal/Modal.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 349px;
   z-index: 5;
-  background-color: white;
+  background-color: #f8f8f8;
   border: 1px solid #ccc;
   border-radius: 7px;
   padding: 16px;
@@ -10,10 +10,13 @@
   top: 3%;
   box-sizing: border-box;
   transition: all 0.3s ease-out;
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
   color: black;
   max-height: calc(100vh - 6%);
   overflow-y: auto;
 }
+
+
 
 @media (max-height: 820px) {
   .Modal {
