add profile and about pages, user can now update profile, small fixes

--- a/client/src/features/Records/CurrentRecord/App/App.module.css
+++ b/client/src/features/Records/CurrentRecord/App/App.module.css
@@ -20,5 +20,7 @@
 .Image {
   border: 1px solid #ced4da;
   border-radius: 3px;
-  max-height: 300px;
+  width: 100%;
+  height: auto;
+  max-width: 600px;
 }
